sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:10: error: not found: value +
    for (i+ecart<-ecart to getNombreValeurs()-1){
          ^AlgCombSort:10: error: not found: value +
    for (i+ecart<-ecart to getNombreValeurs()-1){
          ^